# dino_trm

./: .gitignore  README.md  pyproject.toml  run_all.sh  run_baseline_scaled.sh  run_coco.sh  run_coco_controls.sh  run_recursion_scaled.sh
configs/: base.yaml  pascal_voc.yaml
results/: summary.json  summary_protocol.json
results/baseline/: metrics.json
results/coco/: summary.json  summary_protocol.json
results/coco/baseline/: metrics.json
results/coco/coupled/: metrics.json
results/coco/mlp_block/: metrics.json
results/coco/trm/: metrics.json
results/coco/trm_t1/: metrics.json
results/coupled/: metrics.json
results/trm/: metrics.json
scripts/: build_coco_subset.py  build_train_index.py  compare_matched.py  compare_models.py  coupled_vs_baseline_visuals.py  download_data.py  eval_published.py  make_figures.py  sanity_check.py
src/dino_trm/: eval.py  eval_protocol.py  losses.py  train.py
src/dino_trm/data/: coco.py  pascal_voc.py  voc_imageonly.py
src/dino_trm/models/: backbone.py  decoder.py  full_model.py  mlp_block.py  slot_attention.py  tiny_gnn.py  trm_module.py
src/dino_trm/utils/: logging.py  viz.py
tests/: test_losses.py  test_mlp_block.py  test_recursion_grad.py  test_slot_attention.py  test_tiny_gnn.py
