[project]
name = "dino-trm"
version = "0.1.0"
description = "Recursive slot-graph reasoning (DINOv3 + Slot Attention + TRM) for occluded object recognition"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=3.2.0",
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
    "wandb>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dino_trm"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
